--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="radio_letters">Letters</string>
     <string name="nextGame">Next</string>
     <string name="modifyGame">Modify an existing one</string>
+    <string name="preview">Preview :</string>
 
 </resources>
