--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -25,11 +25,22 @@
     <string name="areYouSure">Do you want to save this game ?</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
+    <string name="addPicture">Import a picture</string>
+    <string name="addSound">Import a sound</string>
+    <string name="fromGallery">From the gallery</string>
+    <string name="fromCamera">From the camera</string>
+    <string name="importPictSound">Import :</string>
+    <string name="aPicture">a picture</string>
+    <string name="aSound">a sound</string>
 
     <string-array name="addition_array">
         <item>@string/plus</item>
         <item>@string/minus</item>
         <item>@string/mult</item>
+    </string-array>
+    <string-array name="addPictureArray">
+        <item>@string/fromGallery</item>
+        <item>@string/fromCamera</item>
     </string-array>
 
 </resources>
