new design but still a bug on the theme's spinner

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -45,6 +45,14 @@
     <string name="sameName">A game with this name already exists. Please choose another name or modify the existing one.</string>
     <string name="titleMissingInfos">Missing informations</string>
     <string name="missingInfos">It seems that there is a problem loading the picture or the sound. Please check that you have selected a picture and a sound.</string>
+    <string name="size">Size : </string>
+    <string name="newGame">New Game : </string>
+    <string name="editor">Editor : </string>
+    <string name="theme">Theme : </string>
+    <string name="defaultTheme">Default</string>
+    <string name="mandala">Mandala</string>
+    <string name="floral">Floral</string>
+    <string name="retro">Retro</string>
 
     <string-array name="addition_array">
         <item>@string/plus</item>
@@ -58,6 +66,12 @@
     <string-array name="addSoundArray">
         <item>@string/fromSDCard</item>
         <item>@string/fromSystem</item>
+    </string-array>
+    <string-array name="changeTheme">
+        <item>@string/defaultTheme</item>
+        <item>@string/mandala</item>
+        <item>@string/floral</item>
+        <item>@string/retro</item>
     </string-array>
 
 </resources>
