--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -12,7 +12,7 @@
     <string name="radio_letters">Lettres</string>
     <string name="nextGame">Suivant</string>
     <string name="modifyGame">Modifier un jeu existant</string>
-    <string name="preview">Aperçu:</string>
+    <string name="preview">Aperçu :</string>
     <string name="warningPairs">Attention : tu dois créer au moins 10 paires pour avoir un jeu utilisable.</string>
     <string name="addPair">Ajouter</string>
     <string name="saveGame">Sauvegarder</string>
@@ -45,6 +45,14 @@
     <string name="sameName">Un jeu avec ce nom existe déjà . Choisis s\'il te plaît un autre nom ou modifie le jeu existant.</string>
     <string name="titleMissingInfos">Informations manquantes</string>
     <string name="missingInfos">Il semble qu\'il y ait eu un problème lors du chargement de l\'image ou du son. Vérifie s\'il te plaît que tu as bien choisi une image et un son.</string>
+    <string name="size">Taille : </string>
+    <string name="newGame">Nouveau jeu : </string>
+    <string name="editor">Editeur : </string>
+    <string name="theme">Thème : </string>
+    <string name="defaultTheme">Défaut</string>
+    <string name="mandala">Mandala</string>
+    <string name="floral">Floral</string>
+    <string name="retro">Rétro</string>
 
     <string-array name="addition_array">
         <item>@string/plus</item>
@@ -58,6 +66,12 @@
     <string-array name="addSoundArray">
         <item>@string/fromSDCard</item>
         <item>@string/fromSystem</item>
+    </string-array>
+    <string-array name="changeTheme">
+        <item>@string/defaultTheme</item>
+        <item>@string/mandala</item>
+        <item>@string/floral</item>
+        <item>@string/retro</item>
     </string-array>
 
 </resources>
