--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -51,8 +51,9 @@
     <string name="theme">Theme : </string>
     <string name="defaultTheme">Default</string>
     <string name="mandala">Mandala</string>
-    <string name="floral">Floral</string>
-    <string name="retro">Retro</string>
+    <string name="golden">Golden</string>
+    <string name="digital">Digital</string>
+    <string name="geometrical">Geometrical</string>
 
     <string-array name="addition_array">
         <item>@string/plus</item>
@@ -70,8 +71,9 @@
     <string-array name="changeTheme">
         <item>@string/defaultTheme</item>
         <item>@string/mandala</item>
-        <item>@string/floral</item>
-        <item>@string/retro</item>
+        <item>@string/golden</item>
+        <item>@string/digital</item>
+        <item>@string/geometrical</item>
     </string-array>
 
 </resources>
